# fast_api_first_project

./: .gitignore  asgi.py  deploy.sh  pyproject.toml  test.sh
.github/workflows/: ci.yml
app/: main.py
app/configs/: __init__.py  base_settings.py  database_settings.py
app/dtos/: article_and_comments_response.py
app/models/: article.py  base_model.py  comment.py
app/routers/: article_router.py  health.py
app/services/: article_service.py
app/tests/: fixtures.py
app/tests/routers/: test_article_router.py
migrations/models/: 0_20241007053104_init.py
tests/: test_main.py
